# ax-codec

./: Cargo.toml  README.md
.github/workflows/: ci.yml
ax-codec-bytes/: Cargo.toml  README.md
ax-codec-bytes/src/: bytes_impl.rs  lib.rs  pool.rs  smallvec_impl.rs
ax-codec-core/: Cargo.toml  README.md  dhat-heap.json
ax-codec-core/benches/: comprehensive_bench.rs  struct_bench.rs  varint_bench.rs  vec_u8_bench.rs
ax-codec-core/examples/: dhat_profile.rs  jemalloc_profile.rs  payload_sizes.rs  pooled_encode.rs
ax-codec-core/src/: buffer.rs  lib.rs  limits.rs  pool.rs  simd.rs  varint.rs
ax-codec-core/tests/: derive_tests.rs  limit_tests.rs
ax-codec-derive/: Cargo.toml  README.md
ax-codec-derive/src/: lib.rs
ax-codec-net/: Cargo.toml  README.md
ax-codec-net/src/: codec.rs  framed.rs  lib.rs  write_buf.rs
ax-codec-net/tests/: codec_integration.rs
axcodec-bytes/: Cargo.toml
axcodec-bytes/src/: bytes_impl.rs  pool.rs  smallvec_impl.rs
axcodec-core/: Cargo.toml
axcodec-core/benches/: comprehensive_bench.rs  struct_bench.rs  varint_bench.rs  vec_u8_bench.rs
axcodec-core/examples/: dhat_profile.rs  jemalloc_profile.rs  payload_sizes.rs  pooled_encode.rs
axcodec-core/src/: bytes_impl.rs  checksum.rs  error.rs  version.rs
axcodec-core/tests/: derive_tests.rs  limit_tests.rs
axcodec-derive/: Cargo.toml
axcodec-derive/src/: lib.rs
axcodec-net/: Cargo.toml
axcodec-net/src/: codec.rs  framed.rs  lib.rs  write_buf.rs
axcodec-net/tests/: codec_integration.rs
docs/: architecture.md  motivation.md  philosophy.md  structure.md
examples/: basic_example.rs  borrow_example.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: struct_decode.rs  varint.rs
scripts/: bench-metrics.sh
src/: lib.rs
tests/: integration_test.rs
