[workspace]
resolver = "3"
members = [
    ".",
    "ax_codec-core",
    "ax_codec-derive",
    "ax_codec-bytes",
    "ax_codec-net",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Bagus Dwi Harianto robbymangkualam2000@gmail.com"]
license = "MIT"
repository = "https://github.com/robby031/ax-codec"
description = "A Rust binary codec with predictable runtime**, minimal allocation, and zero-copy decoding."
readme = "README.md"
rust-version = "1.85"
keywords = ["serialization", "binary", "codec", "zero-copy", "no_std"]
categories = ["encoding", "no-std", "network-programming", "data-structures"]

[workspace.dependencies]
ax_codec-core = { path = "ax_codec-core", version = "0.1.0" }
ax_codec-bytes = { path = "ax_codec-bytes", version = "0.1.0" }
ax_codec-derive = { path = "ax_codec-derive", version = "0.1.0" }
ax_codec-net = { path = "ax_codec-net", version = "0.1.0" }

[package]
name = "ax_codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Meta crate for ax_codec"

[dependencies]
ax_codec-core = { workspace = true }
ax_codec-derive = { workspace = true }
ax_codec-bytes = { workspace = true }
ax_codec-net = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["ax_codec-core/std", "ax_codec-bytes/std", "ax_codec-net?/std"]
alloc = ["ax_codec-core/alloc"]
net = ["dep:ax_codec-net"]
tokio-codec = ["net", "ax_codec-net/tokio-codec"]
simd = ["ax_codec-core/simd"]
