[workspace]
resolver = "3"
members = [
    ".",
    "ax-codec-core",
    "ax-codec-derive",
    "ax-codec-bytes",
    "ax-codec-net",
]

[workspace.package]
version = "0.1.2"
edition = "2024"
authors = ["Bagus Dwi Harianto robbymangkualam2000@gmail.com"]
license = "MIT"
repository = "https://github.com/robby031/ax-codec"
description = "A Rust binary codec with predictable runtime**, minimal allocation, and zero-copy decoding."
readme = "README.md"
rust-version = "1.85"
keywords = ["serialization", "binary", "codec", "zero-copy", "no_std"]
categories = ["encoding", "no-std", "network-programming", "data-structures"]

[workspace.dependencies]
ax-codec-core = { path = "ax-codec-core", version = "0.1.0" }
ax-codec-bytes = { path = "ax-codec-bytes", version = "0.1.0" }
ax-codec-derive = { path = "ax-codec-derive", version = "0.1.0" }
ax-codec-net = { path = "ax-codec-net", version = "0.1.0" }

[package]
name = "ax-codec"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Meta crate for ax_codec"

[dependencies]
ax-codec-core = { workspace = true }
ax-codec-derive = { workspace = true }
ax-codec-bytes = { workspace = true }
ax-codec-net = { workspace = true, optional = true }

[features]
default = ["std"]
std = ["ax-codec-core/std", "ax-codec-bytes/std", "ax-codec-net?/std"]
alloc = ["ax-codec-core/alloc"]
net = ["dep:ax-codec-net"]
tokio-codec = ["net", "ax-codec-net/tokio-codec"]
simd = ["ax-codec-core/simd"]
