[package]
name = "ax-codec-bytes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true

description = "Optimized byte containers for ax_codec"
keywords = ["serialization", "binary", "codec", "zero-copy", "no_std"]
categories = ["encoding", "no-std", "network-programming", "data-structures"]

[features]
default = ["std", "bytes"]
std = ["ax-codec-core/std", "alloc"]
alloc = ["ax-codec-core/alloc"]
bytes = ["dep:bytes"]
smallvec = ["dep:smallvec"]

[dependencies]
ax-codec-core = { workspace = true }
bytes = { version = "1", optional = true }
smallvec = { version = "1", optional = true }

[dev-dependencies]
