[package]
name = "ax-codec-bytes"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

description = "Buffer pooling and bytes crate integration for zero-copy operations and memory-efficient encoding"
keywords = ["serialization", "binary", "codec", "zero-copy", "buffer-pool", "memory-management"]
categories = ["encoding", "memory-management", "no-std", "data-structures"]

[features]
default = ["std", "bytes"]
std = ["ax-codec-core/std", "alloc"]
alloc = ["ax-codec-core/alloc"]
bytes = ["dep:bytes"]
smallvec = ["dep:smallvec"]

[dependencies]
ax-codec-core = { workspace = true }
bytes = { version = "1", optional = true }
smallvec = { version = "1", optional = true }

[dev-dependencies]
