[package]
name = "ax-codec-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true

description = "Derive macros for ax_codec"
keywords = ["serialization", "binary", "codec", "zero-copy", "no_std"]
categories = ["encoding", "no-std", "network-programming", "data-structures"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
