[package]
name = "ax-codec-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme = "README.md"

description = "Procedural derive macros for automatic Encode, Decode, and View trait implementations"
keywords = ["serialization", "binary", "codec", "derive", "macro", "procedural-macro"]
categories = ["encoding", "development-tools", "development-tools::build-utils", "no-std"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
