[package]
name = "ax-codec-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"

description = "Procedural derive macros for automatic Encode, Decode, and View trait implementations"
keywords = ["serialization", "binary", "derive", "macro", "procedural-macro"]
categories = ["encoding", "development-tools", "development-tools::build-utils", "no-std"]

[lib]
proc-macro = true

[dependencies]
ax-codec-core = { workspace = true }
proc-macro2 = "1.0.106"
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full"] }
