[package]
name = "ax_codec-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Networking layer for ax_codec"
keywords = ["codec", "binary", "network", "async"]
categories = ["encoding", "network-programming"]

[features]
default = ["std"]
std = ["ax_codec-core/std", "ax_codec-bytes/std"]
tokio = ["dep:tokio"]
tokio-codec = ["tokio", "dep:tokio-util", "dep:bytes"]

[dependencies]
ax_codec-core = { workspace = true }
ax_codec-bytes = { workspace = true }
ax_codec-derive = { path = "../ax_codec-derive", version = "0.1.0" }
tokio = { version = "1", features = ["io-util"], optional = true }
tokio-util = { version = "0.7.14", features = ["codec", "io"], optional = true }
bytes = { version = "1.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
ax_codec-core = { path = "../ax_codec-core", features = ["simd"] }
ax_codec-derive = { path = "../ax_codec-derive" }

[[test]]
name = "codec_integration"
required-features = ["tokio-codec"]
