[package]
name = "ax-codec-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
readme.workspace = true

description = "Networking layer for ax_codec"
keywords = ["serialization", "binary", "codec", "zero-copy", "no_std"]
categories = ["encoding", "no-std", "network-programming", "data-structures"]

[features]
default = ["std"]
std = ["ax-codec-core/std", "ax-codec-bytes/std"]
tokio = ["dep:tokio"]
tokio-codec = ["tokio", "dep:tokio-util", "dep:bytes"]

[dependencies]
ax-codec-core = { workspace = true }
ax-codec-bytes = { workspace = true }
ax-codec-derive = { path = "../ax-codec-derive", version = "0.1.0" }
tokio = { version = "1", features = ["io-util"], optional = true }
tokio-util = { version = "0.7.14", features = ["codec", "io"], optional = true }
bytes = { version = "1.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
ax-codec-core = { path = "../ax-codec-core", features = ["simd"] }
ax-codec-derive = { path = "../ax-codec-derive" }

[[test]]
name = "codec_integration"
required-features = ["tokio-codec"]
