[package]
name = "axcodec-derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Derive macros for AxCodec"
keywords = ["codec", "binary", "derive", "macro"]
categories = ["encoding"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
