[package]
name = "axcodec-net"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

description = "Networking layer for AxCodec"
keywords = ["codec", "binary", "network", "async"]
categories = ["encoding", "network-programming"]

[features]
default = ["std"]
std = ["axcodec-core/std", "axcodec-bytes/std"]
tokio = ["dep:tokio"]
tokio-codec = ["tokio", "dep:tokio-util", "dep:bytes"]

[dependencies]
axcodec-core = { workspace = true }
axcodec-bytes = { workspace = true }
axcodec-derive = { path = "../axcodec-derive", version = "0.1.0" }
tokio = { version = "1", features = ["io-util"], optional = true }
tokio-util = { version = "0.7.14", features = ["codec", "io"], optional = true }
bytes = { version = "1.8.0", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
axcodec-core = { path = "../axcodec-core", features = ["simd"] }
axcodec-derive = { path = "../axcodec-derive" }

[[test]]
name = "codec_integration"
required-features = ["tokio-codec"]
