[package]
name = "ax_codec-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[workspace]

[dependencies]
libfuzzer-sys = "0.4"
ax_codec-core = { path = "../ax_codec-core" }
ax_codec-derive = { path = "../ax_codec-derive" }

[[bin]]
name = "fuzz_varint"
path = "fuzz_targets/varint.rs"
test = false
doc = false

[[bin]]
name = "fuzz_struct_decode"
path = "fuzz_targets/struct_decode.rs"
test = false
doc = false
